<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentTrendingProjects"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".trendingprojects.TrendingProjectsActivity"
    tools:showIn="@layout/activity_trending_projects">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrendingProjects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="20"
            tools:listitem="@layout/item_trending_project" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_duration="@integer/shimmer_duration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

            <include layout="@layout/item_placeholder_trending_project" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>