...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMenuStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/view_background_selector"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="@dimen/margin_regular"
                android:paddingTop="@dimen/margin_regular"
...
                android:paddingBottom="@dimen/margin_regular"
                android:text="@string/sort_by_stars"
                android:textColor="@color/text_color_regular"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tvMenuName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/view_background_selector"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="@dimen/margin_regular"
                android:paddingTop="@dimen/margin_regular"
...
